--- a/graphs/BankDepositsAll.html
+++ b/graphs/BankDepositsAll.html
@@ -2,24 +2,29 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Καταθέσεις Πολητικών</title>
+<title>Καταθέσεις Πολιτικών</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script type="text/javascript" src="jsonpath-0.8.0.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript" src="pothen_esxes.js"></script>
 </head>
 <body>
-	<h4>Σύνολο Καταθέσεων: €</h4>
+	<h4 id="total">Σύνολο Καταθέσεων: </h4>
+	<h4 id="average">Μέσο Ποσό Καταθέσεων: </h4>
 	<div id="chart_div"></div>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			var bank_names = jsonPath(pothen_esxes,'$..bankName.metaValue');
 			var bank_amounts = jsonPath(pothen_esxes, '$..depositAmount.metaValue');
+			var politicians = jsonPath(pothen_esxes, '$..declaration');
+			var number_of_politicians = politicians[0].length;
 			bank_array =[];
 			bank_graph_array = [];
 			bank_graph_array.push(["Τραπεζικό Ίδρυμα","Ποσό"]);
 			var deposits_sum = bank_amounts.reduce((a,b) => a+b, 0);
-			$('h4').append(deposits_sum.toLocaleString('en'));
+			var average_deposit = deposits_sum/number_of_politicians;
+			$('h4#total').append(deposits_sum.toLocaleString('en',{ style: 'currency', currency: 'EUR' }));
+			$('h4#average').append(average_deposit.toLocaleString('en',{ style: 'currency', currency: 'EUR' }));
 
 			for (var prop in bank_names ) {
 				bank_name = bank_names[prop];
@@ -39,14 +44,17 @@
 			google.charts.setOnLoadCallback(drawChart);
 			function drawChart() {
 				var data = google.visualization.arrayToDataTable(bank_graph_array);
+				var formatter = new google.visualization.NumberFormat({decimalSymbol: '.',groupingSymbol: ',', prefix: '€'});
 				data.sort({column: 1, desc: false});
+				formatter.format(data, 1);
+
 				var options = {
-					title: "Καταθέσεις Πολητικών",
+					title: "Καταθέσεις Πολιτικών",
 					width: 1500,
 					height: 1500,
 					bar: {groupWidth: '95%'},
 					legend: {position: 'none'},
-					hAxis: {title: "Ποσό", ticks: [0,600000,1200000],format:'€###,###,###.00'},
+					hAxis: {title: "Ποσό", ticks: [0,600000,1200000],format:'€###,###,###'},
 					vAxis: {title: "Τραπεζικό Ίδρυμα", textStyle : {fontSize: 11 }},
 					chartArea: {left:450, width:550 ,height: "90%"},
 				};
