--- a/graphs/InsuranceCompanies.html
+++ b/graphs/InsuranceCompanies.html
@@ -13,10 +13,10 @@
 	<div id="chart_div"></div>
 	<script type="text/javascript">
 		$(document).ready(function() {
-			var makes = jsonPath(pothen_esxes,'$..vehicleDescription.metaValue');
+			var insurances = jsonPath(pothen_esxes,'$..insuranceCompany.metaValue');
 			var counts = {}, i, value;
-			for (i = 0; i < makes.length; i++) {
-			    value = makes[i];
+			for (i = 0; i < insurances.length; i++) {
+			    value = insurances[i];
 			    if (typeof counts[value] === "undefined") {
 			        counts[value] = 1;
 			    } else {
@@ -24,7 +24,7 @@
 			    }
 			}
 			counts_array = [];
-			counts_array.push(["Μάρκα Οχήματος", "Αριθμός"]);
+			counts_array.push(["Ασφαλιστική", "Αριθμός"]);
 			for (var prop in counts) {
 				if (prop == '') {
 					counts_array.push(["Άγνωστη" , counts[prop]]);
@@ -39,13 +39,14 @@
 				var data = google.visualization.arrayToDataTable(counts_array);
 				data.sort({column: 0, desc: false});
 				var options = {
-					title: "Οχήματα Πολιτικών",
+					title: "Ασφαλιστικά συμβόλαια Πολιτικών",
 					width: 1000,
 					height: 700,
 					bar: {groupWidth: '95%'},
 					legend: {position: 'none'},
-					hAxis: {ticks: [0,5,10,15,20,25,30], title: "Αριθμός"},
-					vAxis: {title: "Μάρκα"}
+					hAxis: { title: "Αριθμός"},
+					vAxis: {title: "Ασφάλεια"},
+					chartArea: {left:400, width:550},
 				};
 				var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
 				chart.draw(data, options);
