Fixed title in Insurance Graph

--- a/graphs/InsuranceCompanies.html
+++ b/graphs/InsuranceCompanies.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Οχήματα Πολιτικών</title>
+<title>Ασφαλιστικά Συμβόλαια Πολιτικών</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script type="text/javascript" src="jsonpath-0.8.0.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
