--- a/graphs/CarValues.html
+++ b/graphs/CarValues.html
@@ -1,76 +1,78 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Αξία Οχημάτων Πολιτικών</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script type="text/javascript" src="jsonpath-0.8.0.js"></script>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript" src="pothen_esxes.js"></script>
-</head>
-<body>
-	<h4 id="average">Μέση Αξία Οχήματος: </h4>
-	<div id="chart_div"></div>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			var values = jsonPath(pothen_esxes,'$..vehicleValue.metaValue');
-			var values_sum = values.reduce((a,b) => a+b, 0);
-			var average_value = values_sum/values.length;
-			$('h4#average').append(average_value.toLocaleString('en',{ style: 'currency', currency: 'EUR' }));
-			
-			sections_array = [];
-			sections_graph = [];
-			sections_graph.push(["Αξία Οχήματος", "Αριθμός Οχημάτων"]);
-			for (var prop in values) {
-				if (values[prop] > 0) {
-					index = Math.floor(values[prop]/10000);
-					if ( sections_array[index] !== void 0 ) {
-						sections_array[index]++;
+	<head>
+		<meta charset="UTF-8">
+		<title>Αξία Οχημάτων Πολιτικών</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsel/1.1.4/jsel.min.js"></script>
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+		<style>#ajaxLoader { position: fixed; top: 50%; left:50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }</style>
+	</head>
+	<body>
+		<h4 id="average">Μέση Αξία Οχήματος: </h4>
+		<div id="ajaxLoader"><img src="http://tldr.lostattic.com/static/ajax-loader.gif" alt="Ajax Loader"/></div>
+		<div id="chart_div"></div>
+		<script type="text/javascript">
+			$(document).ready(function() {
+				$.getJSON('http://tldr.lostattic.com/static/pothen_esxes.min.json',function (pothen_esxes) {
+					var dom = jsel(pothen_esxes);
+					var values = dom.selectAll('//vehicleValue/@metaValue');
+					var values_sum = values.reduce((a,b) => a+b, 0);
+					var average_value = values_sum/values.length;
+					$('h4#average').append(average_value.toLocaleString('en',{ style: 'currency', currency: 'EUR' }));
+					
+					sections_array = [];
+					sections_graph = [];
+					sections_graph.push(["Αξία Οχήματος", "Αριθμός Οχημάτων"]);
+					for (var prop in values) {
+						if (values[prop] > 0) {
+							index = Math.floor(values[prop]/10000);
+							if ( sections_array[index] !== void 0 ) {
+								sections_array[index]++;
+							}
+							else {
+								sections_array[index] = 1;
+							}
+						}
 					}
-					else {
-						sections_array[index] = 1;
+					count=0;
+					sections_array.forEach(function(elment, index) {
+						if (index != count) {
+							sections_array[count] = 0;
+						}
+						count++;
+					});
+					count = 1;
+					sections_array.forEach(function(element, index) {
+						if (count == 1) {
+							sections_graph.push(['€1-10,000',element]);
+							count++;
+						}
+						else {
+							start = index*10000;
+							end = index*10000 + 10000;
+							sections_graph.push(['€'+ start.toLocaleString('en') + '-' + end.toLocaleString('en'),element]);
+						}
+					});
+					google.charts.load("current", {packages:['corechart']});
+					google.charts.setOnLoadCallback(drawChart);
+					$('#ajaxLoder').hide();
+					function drawChart() {
+						var data = google.visualization.arrayToDataTable(sections_graph);
+						var options = {
+							title: "Aξία Οχήματων Πολιτικών",
+							width: 1000,
+							height: 700,
+							bar: {groupWidth: '95%'},
+							legend: {position: 'none'},
+							vAxis: {title: "Αριθμός Οχημάτων", format: '#,###',},
+							hAxis: {title: "Αξία Οχήματος"},
+						};
+						var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
+						chart.draw(data, options);
 					}
-				}
-			}
-			count=0;
-			sections_array.forEach(function(elment, index) {
-				if (index != count) {
-					sections_array[count] = 0;
-				}
-				count++;
+				});
 			});
-			count = 1;
-			sections_array.forEach(function(element, index) {
-				if (count == 1) {
-					sections_graph.push(['€1-10,000',element]);
-					count++;
-				}
-				else {
-					start = index*10000;
-					end = index*10000 + 10000;
-					sections_graph.push(['€'+ start.toLocaleString('en') + '-' + end.toLocaleString('en'),element]);
-				}
-			});
-			google.charts.load("current", {packages:['corechart']});
-			google.charts.setOnLoadCallback(drawChart);
-			function drawChart() {
-				var data = google.visualization.arrayToDataTable(sections_graph);
-				var options = {
-					title: "Aξία Οχήματων Πολιτικών",
-					width: 1000,
-					height: 700,
-					bar: {groupWidth: '95%'},
-					legend: {position: 'none'},
-					vAxis: {title: "Αριθμός Οχημάτων", format: '#,###',},
-					hAxis: {title: "Αξία Οχήματος"},
-				};
-				var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
-				chart.draw(data, options);
-			}
-			
-		});
-		
-		
-	</script>
-</body>
+		</script>
+	</body>
 </html>
