--- a/graphs/InsuranceCompanies.html
+++ b/graphs/InsuranceCompanies.html
@@ -1,60 +1,61 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Ασφαλιστικά Συμβόλαια Πολιτικών</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script type="text/javascript" src="jsonpath-0.8.0.js"></script>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript" src="pothen_esxes.js"></script>
-</head>
-<body>
-	<h1></h1>
-	<div id="chart_div"></div>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			var insurances = jsonPath(pothen_esxes,'$..insuranceCompany.metaValue');
-			var counts = {}, i, value;
-			for (i = 0; i < insurances.length; i++) {
-			    value = insurances[i];
-			    if (typeof counts[value] === "undefined") {
-			        counts[value] = 1;
-			    } else {
-			        counts[value]++;
-			    }
-			}
-			counts_array = [];
-			counts_array.push(["Ασφαλιστική", "Αριθμός"]);
-			for (var prop in counts) {
-				if (prop == '') {
-					counts_array.push(["Άγνωστη" , counts[prop]]);
-				}
-				else {
-					counts_array.push([prop , counts[prop]]);
-				}
-			}
-			google.charts.load("current", {packages:['corechart']});
-			google.charts.setOnLoadCallback(drawChart);
-			function drawChart() {
-				var data = google.visualization.arrayToDataTable(counts_array);
-				data.sort({column: 0, desc: false});
-				var options = {
-					title: "Ασφαλιστικά συμβόλαια Πολιτικών",
-					width: 1000,
-					height: 700,
-					bar: {groupWidth: '95%'},
-					legend: {position: 'none'},
-					hAxis: { title: "Αριθμός"},
-					vAxis: {title: "Ασφάλεια"},
-					chartArea: {left:400, width:550},
-				};
-				var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
-				chart.draw(data, options);
-			}
-			
-		});
-		
-		
-	</script>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Ασφαλιστικά Συμβόλαια Πολιτικών</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsel/1.1.4/jsel.min.js"></script>
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+		<style>#ajaxLoader { position: fixed; top: 50%; left:50%;-webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }</style>
+	</head>
+	<body>
+		<div id="ajaxLoader"><img src="http://tldr.lostattic.com/static/ajax-loader.gif" alt="Ajax Loader"/></div>
+		<div id="chart_div"></div>
+		<script type="text/javascript">
+			$(document).ready(function() {
+				$.getJSON('http://tldr.lostattic.com/static/pothen_esxes.min.json',function (pothen_esxes) {
+					var dom = jsel(pothen_esxes);
+					var insurances = dom.selectAll('//insuranceCompany/@metaValue');
+					var counts = {}, i, value;
+					for (i = 0; i < insurances.length; i++) {
+					    value = insurances[i];
+					    if (typeof counts[value] === "undefined") {
+					        counts[value] = 1;
+					    } else {
+					        counts[value]++;
+					    }
+					}
+					counts_array = [];
+					counts_array.push(["Ασφαλιστική", "Αριθμός"]);
+					for (var prop in counts) {
+						if (prop == '') {
+							counts_array.push(["Άγνωστη" , counts[prop]]);
+						}
+						else {
+							counts_array.push([prop , counts[prop]]);
+						}
+					}
+					google.charts.load("current", {packages:['corechart']});
+					google.charts.setOnLoadCallback(drawChart);
+					('#ajaxLoder').hide();
+					function drawChart() {
+						var data = google.visualization.arrayToDataTable(counts_array);
+						data.sort({column: 0, desc: false});
+						var options = {
+							title: "Ασφαλιστικά συμβόλαια Πολιτικών",
+							width: 1000,
+							height: 700,
+							bar: {groupWidth: '95%'},
+							legend: {position: 'none'},
+							hAxis: { title: "Αριθμός"},
+							vAxis: {title: "Ασφάλεια"},
+							chartArea: {left:400, width:550},
+						};
+						var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
+						chart.draw(data, options);
+					}
+				});
+			});
+		</script>
+	</body>
 </html>
